# client-server-fifo

./: CMakeLists.txt  Makefile  README.md
src/cmd/: main.cpp
src/internal/clientmanager/: clientmanager.cpp  clientmanager.hpp
src/internal/command/client/: client.cpp  client.hpp
src/internal/command/handler/: handler.cpp  handler.hpp
src/internal/command/server/: server.cpp  server.hpp
src/internal/command/validator/: validator.hpp
src/internal/logger/: logger.hpp
src/internal/processor/: processor.cpp  processor.hpp
src/internal/servermanager/: servermanager.cpp  servermanager.hpp
src/internal/serverunit/: serverunit.cpp  serverunit.hpp
src/internal/signalmanager/: signalmanager.cpp  signalmanager.hpp
src/internal/state/: state.cpp  state.hpp
